Melhoras em atomicidade